--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
   - wget https://github.com/arq5x/bedtools2/releases/download/v2.27.0/bedtools-2.27.0.tar.gz
   - tar zxvf bedtools-2.27.0.tar.gz
   - cd bedtools2 && make && export PATH=$PATH:$PWD/bin && cd ..
+  - pip install requests
 
 script:
   - pip install .
